name:                rest-api-server
version:             0.0.0
synopsis:            REST API server implementation in Haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Mitsutoshi Aoe
maintainer:          Mitsutoshi Aoe <maoe@foldr.in>
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

executable rest-api-server
  main-is: rest_server.hs
  ghc-options: -Wall -threaded
  build-depends:
      base >=4.6 && <4.7
    , aeson == 0.6.2.*
    , bytestring
    , http-types == 0.8.1.*
    , memcache == 0.0.*
    , msgpack == 0.7.2.*
    , mtl
    , mysql-simple == 0.2.2.*
    , resource-pool
    , resourcet
    , wai == 1.4.0.*
    , warp == 1.3.10.*
  default-language:    Haskell2010
